# weft

./: .dockerignore  .gitignore  2026-07-05-claude.txt  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  deny.toml  weftd.example.toml
.cargo/: config.toml
.github/workflows/: ci.yml  docker.yml
client/: PLAN.md  RESUME.md  ROADMAP.md  client.example.toml  package.json  pnpm-lock.yaml
client/src/: app.css  app.html
client/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
client/src-tauri/src/: config.rs  keys.rs  lib.rs  screencap.rs  voice_native.rs  weft.rs
client/src/lib/: actions.ts  callmedia.svelte.ts  constants.ts  context.ts  emoji.ts  highlight.ts  lightbox.svelte.ts  linkguard.svelte.ts  mdhighlight.ts  shortcodes.ts  types.ts  voice.svelte.ts  voiceui.svelte.ts  weft.ts
client/src/lib/components/: Avatar.svelte  CallOverlay.svelte  CapChecklist.svelte  CommunityRail.svelte  ConnectScreen.svelte  ContextMenu.svelte  EmptyHome.svelte  FriendsView.svelte  MemberList.svelte  QuickSwitcher.svelte  Toasts.svelte  VoiceBar.svelte
client/src/lib/components/chat/: Attachment.svelte  ChatTopbar.svelte  Composer.svelte  EmojiPicker.svelte  Lightbox.svelte  LinkPreview.svelte  MessageItem.svelte  MessageList.svelte  ThreadPanel.svelte  VoiceStage.svelte
client/src/lib/components/modals/: CameraPicker.svelte  ChannelSettings.svelte  CreateCategoryModal.svelte  CreateChannelModal.svelte  DiscoverModal.svelte  FederationPanel.svelte  InviteLinkModal.svelte  InvitesModal.svelte  LinkWarningModal.svelte  (+13 more)
client/src/routes/: +page.svelte
crates/weft-admin/: Cargo.toml
crates/weft-admin/src/: auth.rs  dto.rs  handlers.rs  lib.rs
crates/weft-admin/tests/: api.rs
crates/weft-admin/ui/: index.html
crates/weft-client-core/: Cargo.toml
crates/weft-client-core/src/: lib.rs
crates/weft-client-wasm/: Cargo.toml
crates/weft-client-wasm/src/: lib.rs
crates/weft-core/: Cargo.toml
crates/weft-core/src/: accounts.rs  bridge.rs  channel.rs  context.rs  directory.rs  lib.rs  mailer.rs  maintenance.rs  media.rs  registry.rs  session.rs  stream.rs  voice.rs
crates/weft-core/src/session/: auth.rs  calls.rs  caps.rs  channels.rs  federation.rs  friends.rs  groups.rs  invites.rs  moderation.rs  namespaces.rs  profile.rs  relay.rs  roles.rs  verify.rs  voice.rs
crates/weft-core/tests/: session.rs  voice_livekit.rs
crates/weft-crypto/: Cargo.toml
crates/weft-crypto/src/: attestation.rs  caps.rs  captoken.rs  challenge.rs  keys.rs  lib.rs  manifest.rs  mirror.rs  password.rs  profile.rs  rotation.rs  voice.rs
crates/weft-irc/: Cargo.toml
crates/weft-irc/src/: irc.rs  lib.rs  translate.rs
crates/weft-proto/: Cargo.toml
crates/weft-proto/fuzz/: .gitignore  Cargo.toml
crates/weft-proto/fuzz/fuzz_targets/: parse_line.rs  parse_reply.rs  parse_request.rs
crates/weft-proto/src/: command.rs  errcode.rs  error.rs  event.rs  id.rs  lib.rs  line.rs  name.rs  policy.rs  types.rs
crates/weft-proto/tests/: adversarial.rs  roundtrip.rs
crates/weft-rt/: Cargo.toml
crates/weft-rt/src/: lib.rs  sfu.rs
crates/weft-rt/tests/: sfu.rs
crates/weft-store/: Cargo.toml
crates/weft-store/migrations/: 0001_init.sql  0002_verifications.sql  0003_capabilities.sql  0004_namespaces.sql  0005_channel_layout.sql  0006_ns_recovery.sql  0007_reports.sql  0008_federation.sql  0009_moderation.sql  0010_pins.sql  0011_memberships.sql  0012_roles.sql  0013_role_assignments.sql  0014_ns_categories.sql  0015_ns_federation.sql  0016_account_ulid.sql  0017_grants_by_ulid.sql  0018_media.sql  0019_message_meta.sql  0020_media_blocklist.sql  0021_channel_kind.sql  0022_profiles.sql  0023_audit.sql  0024_account_deletion.sql  0025_account_suspended.sql  0026_account_operator.sql  0027_emoji.sql  0028_role_hoist_position.sql  0029_channel_frozen.sql  0030_namespace_frozen.sql  0031_thread_names.sql  0032_friends.sql  0033_groups.sql  0034_invite_creator.sql
crates/weft-store/src/: blob.rs  compact.rs  lib.rs  materialize.rs  memory.rs  postgres.rs  traits.rs  types.rs
crates/weft-store/tests/: backends.rs
crates/weft-transport/: Cargo.toml
crates/weft-transport/src/: insecure.rs  lib.rs  quic.rs  ws.rs
crates/weft-tui/: Cargo.toml
crates/weft-tui/src/: app.rs  main.rs  net.rs  ui.rs
crates/weftd/: Cargo.toml
crates/weftd/src/: acceptor.rs  admin_cli.rs  config.rs  cors.rs  dialer.rs  lib.rs  livekit.rs  mailer.rs  main.rs  media.rs  telemetry.rs  tls.rs  unfurl.rs  web.rs  wellknown.rs
crates/weftd/src/tls/: acme.rs
crates/weftd/tests/conformance/: main.rs
deploy/: Caddyfile  Dockerfile  README.md  docker-compose.yml  livekit.yaml  weft.toml
design/: emoji.html  main.html  namespace.html  profile.html  settings.html
design/admin/: README.md  components.html  layout.html  page-data-table.html  page-detail.html  page-moderation.html  page-search-list.html  weft-admin.html  weft.css
docs/: auto-federation-plan.md  auto-federation-spec-amendment.md  identity-caps-federated-roles-plan.md  media-plan.md  modular-monolith-plan.md  security-posture.md  threat-model.md  voice-livekit-plan.md  voice-plan.md  vps-testing.md  web-admin-panel-plan.md  web-client-plan.md  weft-protocol-spec.md  weftd-server-architecture.md
docs/architecture/: home-authoritative-channels.md
docs/code/: auto-federation-plan.md  auto-federation-spec-amendment.md  e2ee-mls-plan.md  identity-caps-federated-roles-plan.md  media-plan.md  modular-monolith-plan.md  profiles-plan.md  voice-livekit-plan.md  voice-plan.md
docs/protocol/: CHANGES-v0.11.md  DECISIONS-NEEDED-v0.11.md  weft-federation-flows.md  weft-protocol-flows.md  weft-protocol-spec.md  weft-spec-v0.11.adoc  weft-spec-v0.11.html  weft-spec-v0.11.md
docs/security/: security-posture.md  threat-model.md
reviews/: code-navigation.md  fix-quic-idle-disconnects.md  m0-weft-proto-review.md  m1-echo-server-review.md  m2-identity-review.md  m3a-persistence-review.md  m3b-postgres-review.md  m4a-capabilities-review.md  m4b-namespaces-review.md  m4c-recovery-ladder-review.md  m4c-reporting-review.md  weft-tui-review.md
(+5 files in other folders)
