[workspace]
resolver = "2"
members = ["crates/weft-proto", "crates/weft-crypto", "crates/weft-store", "crates/weft-core", "crates/weft-transport", "crates/weft-irc", "crates/weftd", "crates/weft-tui", "client/src-tauri"]
default-members = ["crates/weft-proto", "crates/weft-crypto", "crates/weft-store", "crates/weft-core", "crates/weft-transport", "crates/weft-irc", "crates/weftd"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
thiserror = "1"
ulid = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "net", "signal"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
# ring only — a second provider (aws-lc-rs) would make rustls's process-default ambiguous.
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pki-types = "1"
rcgen = { version = "0.13", default-features = false, features = ["crypto", "ring"] }
tokio-tungstenite = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
ed25519-dalek = { version = "2", features = ["rand_core"] }
ciborium = "0.2"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
argon2 = "0.5"
async-trait = "0.1"
subtle = "2"
axum = "0.7"
rustls-pemfile = "2"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "migrate", "macros"] }

# argon2 at debug-build speed takes >1 s per hash, which makes auth-heavy
# tests crawl and flake against client timeouts. Optimizing just the hash
# crates keeps `cargo test` honest without touching production parameters.
[profile.dev.package.argon2]
opt-level = 3

[profile.dev.package.blake2]
opt-level = 3
