[package]
name = "client"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
weft-client-core = { path = "../../crates/weft-client-core" }
weft-proto = { path = "../../crates/weft-proto" }
weft-crypto = { path = "../../crates/weft-crypto" }
weft-transport = { path = "../../crates/weft-transport", features = ["insecure-client"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "net", "io-util"] }

# §16 voice: grant the WebKitGTK webview's getUserMedia permission (Linux only).
# The version tracks wry's `webkit2gtk` so `PlatformWebview::inner()` returns a
# matching type — bump this if a Tauri upgrade changes wry's version.
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "2.0", features = ["v2_40"] }

# Release optimization lives at the workspace root as a per-package override
# ([profile.release.package.client]) — Cargo ignores profiles in a non-root
# member. `lto`/`panic` can't be set per-package, so they're omitted; if the
# smallest possible bundle is wanted, make this crate its own [workspace].
