[package]
name = "weft-admin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WEFT operator web admin panel (L3): a JSON API + SPA over the store, mounted by weftd."

[dependencies]
weft-proto = { path = "../weft-proto" }
weft-crypto = { path = "../weft-crypto" }
weft-store = { path = "../weft-store" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tracing = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
# HMAC-signed session cookies (don't hand-roll crypto).
hmac = "0.12"
async-trait = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
