[package]
name = "weft-client-wasm"
version.workspace = true
edition.workspace = true
# Not published to crates.io: workspace-internal, path deps only.
publish = false
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

# Browser (WASM) binding for weft-client-core: a WebSocket-driven connection loop
# + a JS event callback. Built with wasm-pack; imported by the SvelteKit web
# build. Excluded from `default-members` (it only builds for wasm32).
[dependencies]
weft-client-core = { path = "../weft-client-core" }
# §10.2/§6.2 client-held keys (namespace root, device) — generated in the browser.
weft-crypto = { path = "../weft-crypto" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { workspace = true }
serde_json = "1"
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = ["WebSocket", "MessageEvent", "CloseEvent", "ErrorEvent", "BinaryType", "Window", "Location", "Storage"]


# wasm32 entropy: getrandom is pulled at 0.2 (via ed25519-dalek) and 0.3 (via
# ulid→rand). Each needs its JS backend enabled for the browser.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
getrandom_v3 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
