[package]
name = "weft-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WEFT domain logic (L2): session FSM, channel actors, registry. No sockets — speaks through the ControlStream trait."

[dependencies]
weft-proto = { path = "../weft-proto" }
weft-crypto = { path = "../weft-crypto" }
weft-store = { path = "../weft-store" }
rand = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true } # CancellationToken for graceful shutdown
tracing = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
