[package]
name = "weft-transport"
version.workspace = true
edition.workspace = true
# Not published to crates.io: workspace-internal, path deps only.
publish = false
rust-version.workspace = true
license.workspace = true
description = "WEFT transports (L2): QUIC (quinn) and WebSocket line framing. Frames bytes into lines; never interprets verbs."

[features]
# Client endpoint that skips certificate verification. For test tooling
# against M1's self-signed dev certs ONLY — never enable in a real client.
insecure-client = []

[dependencies]
weft-proto = { path = "../weft-proto" }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
# Bundled Mozilla root store for verifying a real server's TLS certificate.
webpki-roots = "0.26"
# Lock-free cert hot-swap for reloadable/ACME server certs.
arc-swap = "1"
tokio-tungstenite = { workspace = true }
