[package]
name = "weft-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Terminal test client for the WEFT protocol: pretty event view with a raw-wire toggle. Dev tooling — trusts any server cert."

[dependencies]
weft-proto = { path = "../weft-proto" }
weft-crypto = { path = "../weft-crypto" }
weft-transport = { path = "../weft-transport", features = ["insecure-client"] }
tokio = { workspace = true }
quinn = { workspace = true }
anyhow = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
