[package]
name = "weftd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WEFT reference server binary: config, acceptors, telemetry."

[dependencies]
weft-proto = { path = "../weft-proto" }
weft-core = { path = "../weft-core" }
weft-store = { path = "../weft-store", features = ["postgres"] }
weft-transport = { path = "../weft-transport" }
tokio = { workspace = true }
quinn = { workspace = true }
rcgen = { workspace = true }
rustls-pki-types = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
rustls-pemfile = { workspace = true }

[dev-dependencies]
weft-transport = { path = "../weft-transport", features = ["insecure-client"] }
weft-crypto = { path = "../weft-crypto" }
rcgen = { workspace = true, features = ["pem"] }
serde_json = "1"
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
