[package]
name = "weftd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WEFT reference server binary: config, acceptors, telemetry."

[dependencies]
weft-proto = { path = "../weft-proto" }
weft-crypto = { path = "../weft-crypto" }
weft-core = { path = "../weft-core" }
weft-store = { path = "../weft-store", features = ["postgres"] }
weft-transport = { path = "../weft-transport" }
weft-irc = { path = "../weft-irc" }
weft-admin = { path = "../weft-admin" }
tokio = { workspace = true }
quinn = { workspace = true }
rcgen = { workspace = true }
rustls-pki-types = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
# TLS-terminated HTTP for the admin panel, sharing the QUIC cert resolver.
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
rustls-pemfile = { workspace = true }
# Built-in ACME (Let's Encrypt). Cert-file hot-reload just polls the mtime.
instant-acme = "0.7"
serde_json = "1"
async-trait = { workspace = true }
# §11.10 well-known key fetch: a minimal HTTPS GET. ring provider only (no aws-lc).
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
webpki-roots = "0.26"

[dev-dependencies]
weft-transport = { path = "../weft-transport", features = ["insecure-client"] }
weft-crypto = { path = "../weft-crypto" }
rcgen = { workspace = true, features = ["pem"] }
serde_json = "1"
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
