[package]
name = "weftd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WEFT reference server binary: config, acceptors, telemetry."

[features]
# Embed the built browser client (`client/build`, produced by `pnpm build:web`)
# and serve it from weftd. Off by default so a headless build stays lean and
# needs no prebuilt SPA.
web-ui = ["dep:rust-embed"]
# §16 WEFT-RT voice: compile + embed the webrtc SFU (weft-rt). Off by default so
# a headless build pulls neither webrtc nor its dep tree; a zero-voice server
# stays conformant (advertises no `features=voice`).
voice = ["dep:weft-rt"]

[dependencies]
weft-proto = { path = "../weft-proto" }
weft-crypto = { path = "../weft-crypto" }
weft-core = { path = "../weft-core" }
weft-store = { path = "../weft-store", features = ["postgres"] }
weft-transport = { path = "../weft-transport" }
weft-irc = { path = "../weft-irc" }
weft-admin = { path = "../weft-admin" }
# §16 voice SFU — optional, behind the `voice` feature (pulls webrtc).
weft-rt = { path = "../weft-rt", optional = true }
tokio = { workspace = true }
quinn = { workspace = true }
rcgen = { workspace = true }
rustls-pki-types = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true, features = ["ws"] }
# TLS-terminated HTTP for the admin panel, sharing the QUIC cert resolver.
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
# P3 web embed: bundle the built SvelteKit SPA into the binary. Optional — the
# `web-ui` feature gates both the dep and the `client/build` embed.
rust-embed = { version = "8", optional = true }
rustls-pemfile = { workspace = true }
# Split the same-origin `/ws` socket into Sync sink/stream halves (P3 web embed).
futures-util = { workspace = true }
# §13 media: probe image dimensions + generate thumbnails (common web formats).
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
# Built-in ACME (Let's Encrypt). Cert-file hot-reload just polls the mtime.
instant-acme = "0.7"
serde_json = "1"
async-trait = { workspace = true }
# §11.10 well-known key fetch: a minimal HTTPS GET. ring provider only (no aws-lc).
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
webpki-roots = "0.26"
livekit-api = { version = "0.5.6", default-features = false, features = ["access-token"] }

[dev-dependencies]
weft-transport = { path = "../weft-transport", features = ["insecure-client"] }
weft-crypto = { path = "../weft-crypto" }
rcgen = { workspace = true, features = ["pem"] }
serde_json = "1"
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
# Build/decode real PNGs in the media conformance tests.
image = { version = "0.25", default-features = false, features = ["png"] }
