[package]
name = "weft-proto-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
weft-proto = { path = ".." }

[[bin]]
name = "parse_request"
path = "fuzz_targets/parse_request.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_reply"
path = "fuzz_targets/parse_reply.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_line"
path = "fuzz_targets/parse_line.rs"
test = false
doc = false
bench = false

[workspace]
